# Agentic-AI-for-Environment-Creation-and-Package-Installation-

./: .env.example  .gitignore  README.md  pyproject.toml
src/: __init__.py  main.py
src/agents/: __init__.py  github_researcher.py  installer.py  package_analyzer.py  project_setup.py  recommender.py
src/graph/: workflow.py
src/mcp_servers/: github_server.py  pypi_server.py
tests/: test_basic.py
