[project]
name = "agentic-package-installer"
version = "0.1.0"
description = "An intelligent multi-agent package installer using LangGraph and MCP"
requires-python = ">=3.10"
dependencies = [
    "langgraph>=0.6.8",
    "langchain>=0.3.27",
    "langchain-groq>=0.3.8",
    "mcp>=1.16.0",
    "python-dotenv>=1.1.1",
    "requests>=2.32.5",
    "typer>=0.19.2",
    "rich>=14.1.0",
]

[project.scripts]
agentic-installer = "src.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
